# master-builder

./: .gitignore  Makefile  README.md  action.yml  pyproject.toml  requirements.in  requirements.txt
action/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
action/src/: index.ts  main.ts  mb.ts  mozart.ts  obj-manip.ts
src/master_builder/: __init__.py  cli.py  compose.py  config.py  deploy.py  errors.py  ingress.py  init.py  reporting.py
test_proj/: README.md  docker-compose.yml
